Color changes, and headline updates

--- a/src/modules/cta-banner/one-column/one-column-cta-banners.html
+++ b/src/modules/cta-banner/one-column/one-column-cta-banners.html
@@ -44,6 +44,16 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/cta-banner/one-column/templates/template.dark.onyx.html", {
+			variant: "ink",
+			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
+			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+		} )
+	</td>
+</tr>
 <!-- ---------- END CTA Banner Modules, One Column, H2 Headline ---------- -->
 
 <tr>
@@ -87,6 +97,16 @@
 	<td align="center">
 		@@include( "modules/cta-banner/one-column/templates/template.dark.onyx.html", {
 			variant: "currency",
+			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
+			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/cta-banner/one-column/templates/template.dark.onyx.html", {
+			variant: "ink",
 			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
