--- a/src/modules/email-banner/one-column/one-column-email-banners.html
+++ b/src/modules/email-banner/one-column/one-column-email-banners.html
@@ -52,4 +52,13 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/email-banner/one-column/templates/template.html", {
+			variant: "ink",
+			imgSrc: "LAM_Banner_Industrial.png"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Email Banner One Column Modules ---------- -->
