--- a/src/modules/email-headings/email-headings.html
+++ b/src/modules/email-headings/email-headings.html
@@ -69,6 +69,19 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/email-headings/templates/template.dark.onyx.html", {
+			variant: "ink",
+			eyebrowLabel: "What's Trending",
+			heading: '<h1 style="width: 263px;">Lazard Connect</h1>',
+			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			btnWidth: "98px",
+			btnLabel: "Download"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Email Heading Modules, H1 Headline ---------- -->
 
 <tr>
@@ -134,6 +147,19 @@
 	<td align="center">
 		@@include( "modules/email-headings/templates/template.dark.onyx.html", {
 			variant: "currency",
+			eyebrowLabel: "What's Trending",
+			heading: '<h3 style="max-width: 404px;" >Geopolitical and market implications of the conflict in the Middle East</h3>',
+			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			btnWidth: "65px",
+			btnLabel: "Visit"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/email-headings/templates/template.dark.onyx.html", {
+			variant: "ink",
 			eyebrowLabel: "What's Trending",
 			heading: '<h3 style="max-width: 404px;" >Geopolitical and market implications of the conflict in the Middle East</h3>',
 			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
