--- a/src/modules/four-column-contents/four-column-contents.html
+++ b/src/modules/four-column-contents/four-column-contents.html
@@ -48,4 +48,13 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/four-column-contents/templates/template.html", {
+			variant: "ink dark",
+			imgSrc: "LAM_ContentImage_Ratio.png"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Four Column Contents ---------- -->
