--- a/src/modules/logo-banners/logo-banners.html
+++ b/src/modules/logo-banners/logo-banners.html
@@ -53,4 +53,12 @@
 		} )
 	</td>
 </tr>
+<tr>
+	<td align="center">
+		@@include( "modules/logo-banners/templates/template.html", {
+			variant: "ink",
+			imgSrc: "LAM_Logo_Transparent_White.png"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Logo Banner Modules ---------- -->
