--- a/src/modules/one-column-contents/basic/one-column-contents.html
+++ b/src/modules/one-column-contents/basic/one-column-contents.html
@@ -49,4 +49,13 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/one-column-contents/basic/templates/template.dark.onyx.html", {
+			variant: "ink",
+			imgSrc: "LAM_ContentImage_Waves.png"
+		} )
+	</td>
+</tr>
 <!-- ---------- END One Column Content Modules ---------- -->
