--- a/src/modules/one-column-contents/shift-right/shift-rights.html
+++ b/src/modules/one-column-contents/shift-right/shift-rights.html
@@ -44,4 +44,12 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/one-column-contents/shift-right/templates/template.html", {
+			variant: "ink dark"
+		} )
+	</td>
+</tr>
 <!-- ---------- END One Column Content, Shift Right Modules ---------- -->
