--- a/src/modules/tables/basic/basic-tables.html
+++ b/src/modules/tables/basic/basic-tables.html
@@ -44,4 +44,12 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/tables/basic/templates/template.html", {
+			variant: "ink dark"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Basic Table Modules ---------- -->
