--- a/src/modules/three-column-contents/content/contents.html
+++ b/src/modules/three-column-contents/content/contents.html
@@ -44,4 +44,12 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/three-column-contents/content/templates/template.dark.onyx.html", {
+			variant: "ink"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Three Column Contents, Content Modules ---------- -->
