--- a/src/modules/three-column-contents/speaker/speakers.html
+++ b/src/modules/three-column-contents/speaker/speakers.html
@@ -64,4 +64,16 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/three-column-contents/speaker/templates/template.html", {
+			variant: "ink dark",
+			imgSrc: "LAM_Bio_2.png",
+			name: "Last, First Name",
+			phone: "1 212 632 1325",
+			email: "eduardo.mora@lazard.com"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Three Column Contents, Speaker Modules ---------- -->
