--- a/src/modules/thumbnail-grid/thumbnail-grids.html
+++ b/src/modules/thumbnail-grid/thumbnail-grids.html
@@ -49,4 +49,13 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/thumbnail-grid/templates/template.dark.onyx.html", {
+			variant: "ink",
+			imgSrc: "LAM_ContentImage_Lecture.png"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Thumbnail Grid Modules ---------- -->
