--- a/src/modules/two-column-contents/full-content/full-contents.html
+++ b/src/modules/two-column-contents/full-content/full-contents.html
@@ -44,4 +44,12 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/two-column-contents/full-content/templates/template.dark.html", {
+			variant: "ink"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Two Column Content, Full Content Modules ---------- -->
