--- a/src/modules/two-column-contents/speaker/speakers.html
+++ b/src/modules/two-column-contents/speaker/speakers.html
@@ -64,4 +64,16 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/two-column-contents/speaker/templates/template.html", {
+			variant: "ink dark",
+			imgSrc: "LAM_Bio_2.png",
+			name: "First, Last Name",
+			email: "eduardo.mora@lazard.com",
+			phone: "+1 212 632 1325"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Two Column Content, Speaker Modules ---------- -->
