--- a/src/modules/two-column-contents/strategy-card/strategy-cards.html
+++ b/src/modules/two-column-contents/strategy-card/strategy-cards.html
@@ -49,4 +49,13 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/two-column-contents/strategy-card/templates/template.html", {
+			variant: "ink dark",
+			imgSrc: "LAM_GIFL.png",
+		} )
+	</td>
+</tr>
 <!-- ---------- END Two Column Content, Strategy Card Modules ---------- -->
