--- a/src/modules/two-column-contents/teams/teams.html
+++ b/src/modules/two-column-contents/teams/teams.html
@@ -49,4 +49,13 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/two-column-contents/teams/templates/template.html", {
+			variant: "ink dark",
+			imgSrc: "LAM_Bio_1.png"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Two Column Content, Teams Modules ---------- -->
