--- a/src/modules/two-column-contents/title-left/title-lefts.html
+++ b/src/modules/two-column-contents/title-left/title-lefts.html
@@ -49,4 +49,13 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/two-column-contents/title-left/templates/template.dark.onyx.html", {
+			variant: "ink",
+			imgSrc: "LAM_ContentImage_Station.png"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Two Column Content, Title Left Modules ---------- -->
