--- a/src/modules/email-banner/two-column/two-column-email-banners.html
+++ b/src/modules/email-banner/two-column/two-column-email-banners.html
@@ -52,4 +52,12 @@
 		} )
 	</td>
 </tr>
+<tr>
+	<td align="center">
+		@@include( "modules/email-banner/two-column/templates/template.dark.onyx.html", {
+			variant: "ink",
+			imgSrc: "LAM_Feature_Waves.png"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Email Banner Two Column Modules ---------- -->
