--- a/src/modules/tables/numbered/numbered-tables.html
+++ b/src/modules/tables/numbered/numbered-tables.html
@@ -44,4 +44,12 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/tables/numbered/templates/template.html", {
+			variant: "ink dark"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Numbered Table Modules ---------- -->
