--- a/src/modules/three-column-contents/large-thumbnail/large-thumbnails.html
+++ b/src/modules/three-column-contents/large-thumbnail/large-thumbnails.html
@@ -49,4 +49,13 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/three-column-contents/large-thumbnail/templates/template.html", {
+			variant: "ink dark",
+			imgSrc: "LAM_GIFL.png"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Three Column Contents, Large Thumbnail Modules ---------- -->
