--- a/src/modules/two-column-contents/image-left/image-lefts.html
+++ b/src/modules/two-column-contents/image-left/image-lefts.html
@@ -49,4 +49,13 @@
 		} )
 	</td>
 </tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/two-column-contents/image-left/templates/template.dark.onyx.html", {
+			variant: "ink",
+			imgSrc: "LAM_ContentImage_Lecture.png"
+		} )
+	</td>
+</tr>
 <!-- ---------- END Two Column Content, Image Left Modules ---------- -->
