Addressed some of Leo's feedback, need to update the sample templates

--- a/src/modules/cta-banner/two-column/two-column-cta-banners.html
+++ b/src/modules/cta-banner/two-column/two-column-cta-banners.html
@@ -9,7 +9,7 @@
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.html", {
 			variant: "clarity",
-			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
+			heading: "<h2 class='sans'>Explore a New Perspective on AI from Our Team</h2>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
@@ -19,7 +19,7 @@
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.onyx.html", {
 			variant: "sage",
-			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
+			heading: "<h2 class='sans'>Explore a New Perspective on AI from Our Team</h2>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
@@ -29,7 +29,7 @@
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.dark.html", {
 			variant: "sapphire",
-			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
+			heading: "<h2 class='sans'>Explore a New Perspective on AI from Our Team</h2>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
@@ -39,7 +39,7 @@
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.dark.onyx.html", {
 			variant: "currency",
-			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
+			heading: "<h2 class='sans'>Explore a New Perspective on AI from Our Team</h2>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
@@ -49,7 +49,7 @@
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.dark.onyx.html", {
 			variant: "ink",
-			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
+			heading: "<h2 class='sans'>Explore a New Perspective on AI from Our Team</h2>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
@@ -67,7 +67,7 @@
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.html", {
 			variant: "clarity",
-			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
+			heading: "<h3 class='sans'>Explore a New Perspective on AI from Our Team</h3>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
@@ -77,7 +77,7 @@
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.onyx.html", {
 			variant: "sage",
-			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
+			heading: "<h3 class='sans'>Explore a New Perspective on AI from Our Team</h3>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
@@ -87,7 +87,7 @@
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.dark.html", {
 			variant: "sapphire",
-			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
+			heading: "<h3 class='sans'>Explore a New Perspective on AI from Our Team</h3>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
@@ -97,7 +97,7 @@
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.dark.onyx.html", {
 			variant: "currency",
-			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
+			heading: "<h3 class='sans'>Explore a New Perspective on AI from Our Team</h3>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
@@ -107,7 +107,7 @@
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.dark.onyx.html", {
 			variant: "ink",
-			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
+			heading: "<h3 class='sans'>Explore a New Perspective on AI from Our Team</h3>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
