Added cellpadding 0 to tables for DW

--- a/src/modules/cta-banner/one-column/one-column-cta-banners.html
+++ b/src/modules/cta-banner/one-column/one-column-cta-banners.html
@@ -9,8 +9,8 @@
 	<td align="center">
 		@@include( "modules/cta-banner/one-column/templates/template.html", {
 			variant: "clarity",
-			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
-			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+			heading: "<h2 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h2>",
+			paragraph: "<p class='paragraph-2 margin-b-16'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
 </tr>
@@ -19,8 +19,8 @@
 	<td align="center">
 		@@include( "modules/cta-banner/one-column/templates/template.onyx.html", {
 			variant: "sage",
-			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
-			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+			heading: "<h2 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h2>",
+			paragraph: "<p class='paragraph-2 margin-b-16'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
 </tr>
@@ -29,8 +29,8 @@
 	<td align="center">
 		@@include( "modules/cta-banner/one-column/templates/template.dark.html", {
 			variant: "sapphire",
-			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
-			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+			heading: "<h2 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h2>",
+			paragraph: "<p class='paragraph-2 margin-b-16'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
 </tr>
@@ -39,8 +39,8 @@
 	<td align="center">
 		@@include( "modules/cta-banner/one-column/templates/template.dark.onyx.html", {
 			variant: "currency",
-			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
-			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+			heading: "<h2 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h2>",
+			paragraph: "<p class='paragraph-2 margin-b-16'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
 </tr>
@@ -49,8 +49,8 @@
 	<td align="center">
 		@@include( "modules/cta-banner/one-column/templates/template.dark.onyx.html", {
 			variant: "ink",
-			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
-			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+			heading: "<h2 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h2>",
+			paragraph: "<p class='paragraph-2 margin-b-16'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
 </tr>
@@ -67,8 +67,8 @@
 	<td align="center">
 		@@include( "modules/cta-banner/one-column/templates/template.html", {
 			variant: "clarity",
-			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
-			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+			heading: "<h3 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h3>",
+			paragraph: "<p class='paragraph-2 margin-b-16'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
 </tr>
@@ -77,8 +77,8 @@
 	<td align="center">
 		@@include( "modules/cta-banner/one-column/templates/template.onyx.html", {
 			variant: "sage",
-			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
-			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+			heading: "<h3 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h3>",
+			paragraph: "<p class='paragraph-2 margin-b-16'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
 </tr>
@@ -87,8 +87,8 @@
 	<td align="center">
 		@@include( "modules/cta-banner/one-column/templates/template.dark.html", {
 			variant: "sapphire",
-			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
-			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+			heading: "<h3 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h3>",
+			paragraph: "<p class='paragraph-2 margin-b-16'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
 </tr>
@@ -97,8 +97,8 @@
 	<td align="center">
 		@@include( "modules/cta-banner/one-column/templates/template.dark.onyx.html", {
 			variant: "currency",
-			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
-			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+			heading: "<h3 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h3>",
+			paragraph: "<p class='paragraph-2 margin-b-16'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
 </tr>
@@ -107,8 +107,8 @@
 	<td align="center">
 		@@include( "modules/cta-banner/one-column/templates/template.dark.onyx.html", {
 			variant: "ink",
-			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
-			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+			heading: "<h3 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h3>",
+			paragraph: "<p class='paragraph-2 margin-b-16'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
 </tr>
