Removed module vertical padding, added two+ column padding

--- a/src/modules/email-headings/email-headings.html
+++ b/src/modules/email-headings/email-headings.html
@@ -10,8 +10,8 @@
 		@@include( "modules/email-headings/templates/template.html", {
 			variant: "parchment",
 			eyebrowLabel: "What's Trending",
-			heading: '<h1 style="width: 263px;" class="margin-b-16">Lazard Connect</h1>',
-			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			heading: '<h1 class=" sans margin-b-16">Lazard Connect</h1>',
+			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
 		} )
@@ -23,8 +23,8 @@
 		@@include( "modules/email-headings/templates/template.onyx.html", {
 			variant: "sage",
 			eyebrowLabel: "What's Trending",
-			heading: '<h1 style="width: 263px;" class="margin-b-16">Lazard Connect</h1>',
-			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			heading: '<h1 class=" sans margin-b-16">Lazard Connect</h1>',
+			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
 		} )
@@ -36,8 +36,8 @@
 		@@include( "modules/email-headings/templates/template.html", {
 			variant: "clarity",
 			eyebrowLabel: "What's Trending",
-			heading: '<h1 style="width: 263px;" class="margin-b-16">Lazard Connect</h1>',
-			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			heading: '<h1 class=" sans margin-b-16">Lazard Connect</h1>',
+			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
 		} )
@@ -49,8 +49,8 @@
 		@@include( "modules/email-headings/templates/template.dark.html", {
 			variant: "sapphire",
 			eyebrowLabel: "What's Trending",
-			heading: '<h1 style="width: 263px;" class="margin-b-16">Lazard Connect</h1>',
-			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			heading: '<h1 class=" sans margin-b-16">Lazard Connect</h1>',
+			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
 		} )
@@ -62,8 +62,8 @@
 		@@include( "modules/email-headings/templates/template.dark.onyx.html", {
 			variant: "currency",
 			eyebrowLabel: "What's Trending",
-			heading: '<h1 style="width: 263px;" class="margin-b-16">Lazard Connect</h1>',
-			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			heading: '<h1 class=" sans margin-b-16">Lazard Connect</h1>',
+			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
 		} )
@@ -75,8 +75,8 @@
 		@@include( "modules/email-headings/templates/template.dark.onyx.html", {
 			variant: "ink",
 			eyebrowLabel: "What's Trending",
-			heading: '<h1 style="width: 263px;" class="margin-b-16">Lazard Connect</h1>',
-			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			heading: '<h1 class=" sans margin-b-16">Lazard Connect</h1>',
+			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
 		} )
@@ -96,8 +96,8 @@
 		@@include( "modules/email-headings/templates/template.html", {
 			variant: "parchment",
 			eyebrowLabel: "What's Trending",
-			heading: '<h3 style="max-width: 404px;" class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
-			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			heading: '<h3 class="sans margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
+			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
 		} )
@@ -109,8 +109,8 @@
 		@@include( "modules/email-headings/templates/template.onyx.html", {
 			variant: "sage",
 			eyebrowLabel: "What's Trending",
-			heading: '<h3 style="max-width: 404px;" class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
-			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			heading: '<h3 class="sans margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
+			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
 		} )
@@ -122,8 +122,8 @@
 		@@include( "modules/email-headings/templates/template.html", {
 			variant: "clarity",
 			eyebrowLabel: "What's Trending",
-			heading: '<h3 style="max-width: 404px;" class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
-			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			heading: '<h3 class="sans margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
+			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
 		} )
@@ -135,8 +135,8 @@
 		@@include( "modules/email-headings/templates/template.dark.html", {
 			variant: "sapphire",
 			eyebrowLabel: "What's Trending",
-			heading: '<h3 style="max-width: 404px;" class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
-			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			heading: '<h3 class="sans margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
+			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
 		} )
@@ -148,8 +148,8 @@
 		@@include( "modules/email-headings/templates/template.dark.onyx.html", {
 			variant: "currency",
 			eyebrowLabel: "What's Trending",
-			heading: '<h3 style="max-width: 404px;" class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
-			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			heading: '<h3 class="sans margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
+			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
 		} )
@@ -161,8 +161,8 @@
 		@@include( "modules/email-headings/templates/template.dark.onyx.html", {
 			variant: "ink",
 			eyebrowLabel: "What's Trending",
-			heading: '<h3 style="max-width: 404px;" class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
-			paragraph: '<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			heading: '<h3 class="sans margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
+			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
 		} )
