--- a/src/modules/email-headings/email-headings.html
+++ b/src/modules/email-headings/email-headings.html
@@ -10,7 +10,7 @@
 		@@include( "modules/email-headings/templates/template.html", {
 			variant: "parchment",
 			eyebrowLabel: "What's Trending",
-			heading: '<h1 class=" sans margin-b-16">Lazard Connect</h1>',
+			heading: '<h1 class="margin-b-16">Lazard Connect</h1>',
 			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
@@ -23,7 +23,7 @@
 		@@include( "modules/email-headings/templates/template.onyx.html", {
 			variant: "sage",
 			eyebrowLabel: "What's Trending",
-			heading: '<h1 class=" sans margin-b-16">Lazard Connect</h1>',
+			heading: '<h1 class="margin-b-16">Lazard Connect</h1>',
 			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
@@ -36,7 +36,7 @@
 		@@include( "modules/email-headings/templates/template.html", {
 			variant: "clarity",
 			eyebrowLabel: "What's Trending",
-			heading: '<h1 class=" sans margin-b-16">Lazard Connect</h1>',
+			heading: '<h1 class="margin-b-16">Lazard Connect</h1>',
 			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
@@ -49,7 +49,7 @@
 		@@include( "modules/email-headings/templates/template.dark.html", {
 			variant: "sapphire",
 			eyebrowLabel: "What's Trending",
-			heading: '<h1 class=" sans margin-b-16">Lazard Connect</h1>',
+			heading: '<h1 class="margin-b-16">Lazard Connect</h1>',
 			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
@@ -62,7 +62,7 @@
 		@@include( "modules/email-headings/templates/template.dark.onyx.html", {
 			variant: "currency",
 			eyebrowLabel: "What's Trending",
-			heading: '<h1 class=" sans margin-b-16">Lazard Connect</h1>',
+			heading: '<h1 class="margin-b-16">Lazard Connect</h1>',
 			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
@@ -75,7 +75,7 @@
 		@@include( "modules/email-headings/templates/template.dark.onyx.html", {
 			variant: "ink",
 			eyebrowLabel: "What's Trending",
-			heading: '<h1 class=" sans margin-b-16">Lazard Connect</h1>',
+			heading: '<h1 class="margin-b-16">Lazard Connect</h1>',
 			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
@@ -96,7 +96,7 @@
 		@@include( "modules/email-headings/templates/template.html", {
 			variant: "parchment",
 			eyebrowLabel: "What's Trending",
-			heading: '<h3 class="sans margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
+			heading: '<h3 class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
 			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
@@ -109,7 +109,7 @@
 		@@include( "modules/email-headings/templates/template.onyx.html", {
 			variant: "sage",
 			eyebrowLabel: "What's Trending",
-			heading: '<h3 class="sans margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
+			heading: '<h3 class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
 			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
@@ -122,7 +122,7 @@
 		@@include( "modules/email-headings/templates/template.html", {
 			variant: "clarity",
 			eyebrowLabel: "What's Trending",
-			heading: '<h3 class="sans margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
+			heading: '<h3 class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
 			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
@@ -135,7 +135,7 @@
 		@@include( "modules/email-headings/templates/template.dark.html", {
 			variant: "sapphire",
 			eyebrowLabel: "What's Trending",
-			heading: '<h3 class="sans margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
+			heading: '<h3 class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
 			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
@@ -148,7 +148,7 @@
 		@@include( "modules/email-headings/templates/template.dark.onyx.html", {
 			variant: "currency",
 			eyebrowLabel: "What's Trending",
-			heading: '<h3 class="sans margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
+			heading: '<h3 class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
 			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
@@ -161,7 +161,7 @@
 		@@include( "modules/email-headings/templates/template.dark.onyx.html", {
 			variant: "ink",
 			eyebrowLabel: "What's Trending",
-			heading: '<h3 class="sans margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
+			heading: '<h3 class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
 			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
